Updated Maven version.